force-app/main/default/objects/Switchee_Device__c/Switchee_Device__c.object-meta.xml
<CustomObject>
    <description>Physical Switchee hardware device installed at a property (thermostat, multi-sensor, energy node)</description>
    <label>Switchee Device</label>
    <nameField>
        <displayFormat>SD-{0000000}</displayFormat>
        <label>Device Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Switchee Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>