force-app/main/default/objects/Switchee_Device__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <inlineHelpText>Hardware type code: SWT, Z_MS, Z_EN</inlineHelpText>
    <length>20</length>
    <type>Text</type>
</CustomField>