force-app/main/default/objects/Switchee_Device__c/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Switchee Devices</relationshipLabel>
    <relationshipName>Switchee_Devices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>